--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ body{
     align-items: center;
     gap: 10px;
     flex-direction: column;
+    background-position: center center;
+    background-size: cover;
     height: 100vh;
 }
 .border{
